Après la réunion de 2/10/2026